# Autonomous-RC-car

./: .gitignore  DrawableElements.py  LICENSE  PID.py  PIDController.py  Phase2Controller.py  PurePursuitSimulation.py  README.md  Simulation.py  TODO.txt  calibrate_stereo.py  capture_and_run.py  depth-map.py  dummy_stereo.py  joystick.py  layout.md  main.py  motorcontrol.py  openCV_dispar_map.py  pyproject.toml  requirements.txt  run_all.py  run_both.py  steering-test.ipynb  stereo_pi_integration.py  test_phase2.py  test_simulation.py
camera/: calibrate.py  dummy_stereo.py  stereo-vision.py  stereo.py  stereo_pi_integration.py
control/: joystick.py  motorcontrol.py
exploration_algorithms/: APF.py
maps/: OccupancyGrid.py
path_optimizing_algorithms/: LatticeMotionPlanner.py
pathfinding_algorithms/: AStar.py  AdaptivePPC.py  ConstantPPC.py  PurePursuit.py  WallFollower.py
planning/: decision.py  run_all.py  run_both.py
robots/: AckermannSteeringCar.py  DifferentialDriveCar.py
saved_simulations/: tuning_params.txt
